--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "version": "1.0.0",
   "author": "ciiiii <allen.cccccnm@gmail.com>",
-  "dependencies": {},
   "devDependencies": {
-    "prettier": "^2.4.1",
+    "prettier": "^3.5.3",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "wrangler": "^3.36.0"
+    "webpack-cli": "^6.0.1",
+    "wrangler": "^4.5.0"
   },
   "scripts": {
     "format": "prettier --write '**/*.{js,css,json,md}'",
     "build": "webpack",
     "dev": "wrangler dev src/index.js --env dev"
   },
+  "packageManager": "yarn@4.5.0",
   "license": "MIT",
   "main": "src/index.js"
 }
